--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "lab1",
     "lab2",
     "lab3",
+    "pynacl>=1.5.0",
 ]
 
 [tool.uv.workspace]
@@ -17,3 +18,9 @@ members = ["lab1", "lab2", "lab3", "lab4"]
 lab1 = { workspace = true }
 lab2 = { workspace = true }
 lab3 = { workspace = true }
+
+[tool.ruff]
+line-length = 109
+
+[tool.ruff.lint]
+select = ["E", "W", "F", "B", "I", "D1", "D417", "D417", "D419"]
