--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,11 +3,11 @@ version: '3'
 tasks:
   zip-*:
     desc: "Zip lab directory ready for submission."
-    deps: [mkdir_zips]
     vars:
       FOLDER: "lab{{index .MATCH 0}}"
     dir: "{{.FOLDER}}"
     cmds:
+      - mkdir -p ../zips
       - cp ../Dockerfile .
       - defer: rm -f Dockerfile
       - cp ../run.sh .
@@ -16,10 +16,10 @@ tasks:
     preconditions:
       - sh: uv run --directory {{.FOLDER}} python -m unittest discover -v -s tests
         msg: "One or more unit tests are failing, fix before zipping."
+      - sh: uv run --directory {{.FOLDER}}/src mypy .
+        msg: "src failed mypy typecheck."
+      - sh: uv run --directory {{.FOLDER}}/tests mypy .
+        msg: "tests failed mypy typecheck."
       - sh: ls {{.FOLDER}}/*.pdf
         msg: "Lab report not present, add before zipping."
     silent: false
-  
-  mkdir_zips:
-    cmds: 
-      - mkdir -p zips
