--- a/lab0/pyproject.toml
+++ b/lab0/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "cffi>=1.17.1",
     "pycparser>=2.22",
     "pynacl>=1.5.0",
+    "pytest>=8.3.4",
     "typing-extensions>=4.12.2",
 ]
 
