--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,10 @@ line-length = 109
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "B", "I", "D1", "D417", "D417", "D419"]
+
+[tool.ruff.per-file-ignores]
+# Ignore all directories named `tests`.
+"tests/**" = ["D"]
+# Ignore all files that end in `_test.py`.
+"*_test.py" = ["D"]
+"test_*.py" = ["D"]
