pass cli args to pytest

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -47,4 +47,4 @@ tasks:
       FOLDER: "lab{{index .MATCH 0}}"
     dir: "{{.FOLDER}}"
     cmds:
-      - uv run python -m pytest
+      - uv run python -m pytest {{.CLI_ARGS}}
