--- a/lab1/pyproject.toml
+++ b/lab1/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pytest>=8.3.4",
+    "pytest-sugar>=1.0.0",
 ]
 
 [build-system]
