--- a/lab1/pyproject.toml
+++ b/lab1/pyproject.toml
@@ -5,8 +5,7 @@ description = "Primitives, Diffie-Hellman, Signatures"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pytest>=8.3.4",
-    "pytest-sugar>=1.0.0",
+    "pytest>=8.3.4"
 ]
 
 [build-system]
