--- a/lab1/pyproject.toml
+++ b/lab1/pyproject.toml
@@ -5,7 +5,8 @@ description = "Primitives, Diffie-Hellman, Signatures"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pytest>=8.3.4"
+    "pynacl>=1.5.0",
+    "pytest>=8.3.4",
 ]
 
 [build-system]
