--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
     "coverage>=7.6.12",
     "lab0",
     "lab1",
-    "lab2",
     "lab3",
     "mypy>=1.14.1",
     "mypy-extensions>=1.0.0",
@@ -16,12 +15,11 @@ dependencies = [
 ]
 
 [tool.uv.workspace]
-members = ["lab0", "lab1", "lab2", "lab3", "lab4", "in_class"]
+members = ["lab0", "lab1", "lab3", "lab4", "in_class"]
 
 [tool.uv.sources]
 lab0 = { workspace = true }
 lab1 = { workspace = true }
-lab2 = { workspace = true }
 lab3 = { workspace = true }
 
 
