--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,19 +8,17 @@ dependencies = [
     "coverage>=7.6.12",
     "lab0",
     "lab1",
-    "lab3",
     "mypy>=1.14.1",
     "mypy-extensions>=1.0.0",
     "pynacl>=1.5.0",
 ]
 
 [tool.uv.workspace]
-members = ["lab0", "lab1", "lab3", "lab4", "in_class"]
+members = ["lab0", "lab1", "lab4", "in_class"]
 
 [tool.uv.sources]
 lab0 = { workspace = true }
 lab1 = { workspace = true }
-lab3 = { workspace = true }
 
 
 [tool.ruff]
